<resources>
    <string name="app_name">库存管理</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_user">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="rember_password">记住账号</string>
    <string name="in_storage_text">入库</string>
    <string name="out_storage_text">出库</string>
    <string name="check_text">盘点</string>
    <string name="transfer_text">转移</string>

    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="ip_address">ip_address</string>

    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>

    <string name="login_successful_hint">登陆成功</string>
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="loading_data_fail">加载数据失败...</string>

    <!-- 列表 -->
    <string name="item_num_title">编号:</string>
    <string name="item_desc_title">描述:</string>
    <!--hint-->
    <string name="hint_item_num_title">暂无编号</string>
    <string name="hint_item_desc_title">暂无描述</string>

    <!--库存转移-->
    <string name="title_activity_locations_detail">库房</string>
    <string name="locations_location_title">位置:</string>
    <string name="location_sited_text">地点:</string>
    <string name="locations_removed_btn">移出</string>
    <string name="locations_move_btn">移入</string>
    <string name="locations_title_text">库房详情</string>
    <string name="location_zhuangyi">转移</string>
    <string name="location_zhuangyi_matrectrans">转移详情</string>

    <!-- 二微码扫描 -->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scanning_text">条码/二维码</string>

    <!--入库详情-->
    <string name="po_num_text">采购单:</string>
    <string name="po_desc_text">描述:</string>
    <string name="po_recorder_text">接收人:</string>
    <string name="po_vendor_text">供应商:</string>
    <string name="po_recorde_text">接收</string>
    <string name="po_return_text">退货</string>


    <string name="have_not_data">暂无数据</string>

    <string name="material_receiving">物料接收</string>
    <string name="input_all">全部提交</string>
    <string name="confirm_text">确认</string>

    <string name="submit_process_ing">正在提交</string>


    <!--poline-->
    <string name="poline_itemnum">项目:</string>
    <string name="poline_polinenum">行号:</string>
    <string name="poline_desc">描述:</string>
    <string name="poline_recorde_num">接收数量:</string>
    <string name="poline_return_num">退货数量:</string>
    <string name="poline_orderqty">总数量:</string>
    <string name="poline_orderunit">单位:</string>
    <string name="poline_storeloc">仓库号:</string>
    <string name="poline_binnum">库位号:</string>
    <string name="lotnum_text">批次:</string>

    <string name="title_activity_invbalance_detail">详情</string>

    <string name="input">提交</string>
    <!--出库详情-->

    <!--出库详情-->
    <string name="workorder_wonum_title">编号:</string>
    <string name="workorder_desction_title">描述:</string>
    <string name="workorder_onbehalfof_title">领用人:</string>
    <string name="workorder_status_title">状态:</string>
    <string name="workorder_detail_title">出库详情</string>
    <string name="invreserve_location_title">库房:</string>
    <string name="withdrawing_text">退库</string>
    <string name="issue_text">发放</string>
    <string name="isfinish_title">已经生产编码 ?</string>
    <string name="invbalances_pici_hint">请输入批次进行选择...</string>
    <string name="matrectrans_fromlot_title">原批次:</string>
    <string name="matrectrans_tolot_title">目标批次:</string>


    <!--库存余量详情-->
    <string name="title_activity_cinvbalances_detail">库存余量详情</string>
    <string name="invbalances_binnum_title">货柜:</string>
    <string name="invbalances_lotnum_title">批次:</string>
    <string name="invbalances_curbal_title">当前余量:</string>
    <string name="invbalances_invtype_title">库存类别:</string>
    <string name="inbalance_itemnum_title">物资编号:</string>
    <string name="cinvbalances_detail_title">余量详情</string>

    <!--库存项目-->
    <string name="title_activity_invbalances_list">库存项目</string>
    <string name="item_num_text">项目编号:</string>
    <string name="invbalances_itemnum_text">项目:</string>


    <!--库存项目详情-->
    <string name="invbalance_itemnum_title">项目:</string>
    <string name="invbalance_in20_title">规格型号:</string>
    <string name="invbalance_orderunit_title">订购单位:</string>
    <string name="invbalance_curbal_title">当前余量:</string>
    <string name="invbalance_location_title">库房:</string>
    <string name="invbalance_siteid_title">地点:</string>
    <string name="invbalance_binnum_title">货柜:</string>

    <!--库存转移详情页面-->
    <string name="matrectrans_itemnum">项目:</string>
    <string name="matrectrans_description">描述:</string>
    <string name="matrectrans_type">型号:</string>
    <string name="matrectrans_receiptquantity">数量:</string>
    <string name="matrectrans_curbaltotal">当前余量:</string>
    <string name="matrectrans_linecost">行成本:</string>
    <string name="matrectrans_frombin">原库位号:</string>
    <string name="matrectrans_fromstoreloc">原仓库:</string>
    <string name="matrectrans_tostoreloc_title">目标仓库</string>
    <string name="matrectrans_tostoreloc">目标仓库:</string>
    <string name="matrectrans_tobin">目标库位号:</string>
    <string name="matrectrans_details">转移详情</string>


    <!--仓库库位号选择页面-->
    <string name="title_activity_bin">库位号</string>
    <string name="bin_from">原库位号</string>
    <string name="bin_to">目标库位号</string>
    <string name="bin_batch">批次:</string>
    <string name="bin_curbaltotal">当前余量:</string>
    <string name="bin_item">货柜:</string>

    <string name="search">查询</string>
    <string name="search_result">查询结果</string>



    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
</resources>
