<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/title_contains"
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimens_8dp"
            android:paddingTop="@dimen/dimens_8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/item_num_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_20" />

            <TextView
                android:id="@+id/item_num_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_toRightOf="@+id/item_num_title"
                android:hint="@string/have_not_data"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_20" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/num_linearlayout_id"
            android:background="@drawable/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimens_8dp"
            android:paddingTop="@dimen/dimens_8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/item_desc_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_20" />

            <TextView
                android:id="@+id/item_desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_toRightOf="@+id/item_num_title"
                android:hint="@string/have_not_data"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_20" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/num_linearlayout_id"
            android:background="@drawable/line"></View>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/search"
            android:background="@drawable/btn_enable_green"/>



    </LinearLayout>
</LinearLayout>
