<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_20"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimens_20"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/login_top" />


        </LinearLayout>


        <EditText
            android:id="@+id/login_username_edit"
            android:layout_marginLeft="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20"
            android:background="@drawable/edittext_login"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="@dimen/dimen_5"
            android:hint="@string/prompt_user"
            android:singleLine="true"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_20"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/edittext_login"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/dimen_5"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox"
            android:layout_marginLeft="@dimen/dimens_20"

            android:checked="false"
            android:text="@string/rember_password"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_enable_green"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:layout_marginLeft="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_20"
            android:text="登录"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>


</LinearLayout>